--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 
 .DS_Store
+/diploma-frontend_gitlab/
+/megano/db.sqlite3
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/Python_django_diploma_dpo.iml
+/.idea/vcs.xml
